# Awohali

./: .gitignore  .gitmodules  Awohali.code-workspace  GNSS002_hpposllh.csv  GNSS002_rawx.csv  GNSS004_rawx.csv  GNSS006_hpposllh.csv  GNSS006_rawx.csv  GNSS007_hpposllh.csv  GNSS009_pvt.csv  GNSS009_rawx.csv  GNSS011_pvt.csv  GNSS016_hpposllh.csv  README.md  pwv_calc.ods
docs/: README.md  (+2 more)
firmware/drivers/zedf9p/examples/datalogging_stm32cube/: .mxproject  CMakeLists.txt  datalogging_stm32cube.ioc  platformio.ini
firmware/pico-sdk/gnss_datalogging/: CMakeLists.txt
firmware/pico-sdk/gnss_datalogging/boards/: adafruit_metro_rp2350.h
firmware/pico-sdk/gnss_datalogging/include/: hw_config.h  main.h
firmware/pico-sdk/gnss_datalogging/src/: diskio.c  fatfs_utils.c  hw_config.c  main.c  zedf9p_platform_pico.c
scripts/: dependencies.txt  pyproject.toml
software/Python/: .gitignore  README.md  RINEXNavParser.py  datetime_conversion.py  galileo_examples.py  galileo_sfrbx_parser.py  pyproject.toml  tropospheric_delay_ORMD.py  ubx_nav_parser_with_galileo.py  ubx_parser.py
software/Python/VMF/: vmf3o_b_c.py
software/Python/data/: G18_RINEX.csv  G18_UBX.csv  G26.csv  G26_RINEX.csv  G26_UBX.csv  G26_gpsTOW_fixed.csv  G26_with_filter.csv  epoch_summary.csv
software/Python/data/RINEX_data/: USN700USA_R_20253290000_01D_MN.rnx  USN700USA_R_20260150000_01D_MN.rnx
software/Python/data/RINEX_data/ephemerides/: USN700USA_R_20252710000_01D_MN.rnx  USN700USA_R_20252730000_01D_MN.rnx  USN700USA_R_20260580000_01D_MN.rnx  USN700USA_R_20260590000_01D_MN.rnx  USN700USA_R_20260600000_01D_MN.rnx
software/Python/data/VMF3/vmf3o_SH/: anm_bh.txt  anm_bw.txt  anm_ch.txt  anm_cw.txt  bnm_ch.txt
software/Python/data/appalachian_plots/: summary_report.txt
software/Python/data/configs/: EVK-X20P-CONFIG.ucf  EVK-X20P-CONFIG_msgout.csv  EVK-X20P-CONFIG_parsed.csv
software/Python/data/ephemerides/: eph_new_new.json  eph_rinex.json  ephemeris_2025-09-28.json  ephemeris_2025-09-30.json  ephemeris_2025-11-25.json  ephemeris_2025-11-25_RINEX.json  ephemeris_2026-01-15.json  ephemeris_2026-01-15_new.json  ephemeris_2026-02-27_RINEX.json  ephemeris_2026-02-27_to_03-01_RINEX.json  ephemeris_2026-02-28_RINEX.json  ephemeris_2026-03-01_RINEX.json  ephemeris_ormondBeach.json  ephemeris_sample.json
software/Python/data/mapping_functions/: VMF3_20260115_H12.txt  VMF3_20260227_H00.txt  VMF3_20260227_H06.txt  VMF3_20260227_H12.txt  VMF3_20260227_H18.txt  VMF3_20260228_H00.txt  VMF3_20260228_H06.txt  VMF3_20260228_H12.txt  VMF3_20260228_H18.txt  VMF3_20260301_H00.txt  VMF3_20260301_H06.txt  VMF3_20260301_H12.txt  VMF3_20260301_H18.txt
software/Python/data/ubx_data/: RXM_RAWX.ubx
software/Python/data/ubx_data/2025-09-18/: GNSS001_hpposllh.csv  GNSS002.ubx  GNSS004.ubx  GNSS004_hpposllh.csv  GNSS006.ubx  GNSS007.ubx  GNSS011_rawx.csv  GNSS012.ubx  GNSS013_hpposllh.csv
software/Python/data/ubx_data/2025-09-21/: GNSS001.ubx
software/Python/data/ubx_data/2025-09-26/: GNSS001_rawx.csv
software/Python/data/ubx_data/2025-09-27/: GNSS001.ubx  GNSS001_pvt.csv
software/Python/data/ubx_data/2025-09-28/: GNSS002.ubx  GNSS002_pvt.csv  GNSS004_NAV_TIMEUTC.csv  GNSS009_NAV_CLOCK.csv  GNSS009_RXM_SFRBX.csv  GNSS010_NAV_CLOCK.csv  GNSS010_NAV_HPPOSLLH.csv  GNSS010_RXM_RAWX.csv  GNSS013.ubx  GNSS014.ubx  GNSS014_NAV_CLOCK.csv  GNSS014_RXM_RAWX.csv  GNSS014_RXM_SFRBX.csv  GNSS015.db
software/Python/data/ubx_data/2025-09-29/: GNSS001_NAV_TIMEUTC.csv  GNSS001_RXM_RAWX.csv
software/Python/data/ubx_data/2025-09-30/: 2025-9-30_103727_serial-COM4.db  2025-9-30_103727_serial-COM4_MON_COMMS.csv  2025-9-30_103727_serial-COM4_MON_RF.csv  (+16 more)
software/Python/data/ubx_data_old/: devttyACM0_2024_12_26.11.30.33.197.txt  devttyACM0_2024_12_26.12.17.35.518.txt  devttyACM0_2024_12_26.12.20.30.853.txt
software/Python/data/vmf3o_SH/: bnm_bh.txt  bnm_cw.txt
software/Python/dataAnalysis/: pseudorange_difference.py  pwv_analysis.py  tropospheric_delay_analysis_ormd.py
software/Python/ephemerides/: ephemeris_sample_2025-10-03.json  ephemeris_sample_2025-11-25.json
software/Python/examples/: create_galileo_ephemeris.py  ephemeris_new.json  example_geometric_range.py  galileo_examples.py  sfrbx_parser_example_usage.py
software/Python/experiments/: concat_rinex.py  implied_ztd.py  least_squares.py  ormondBeach_geometric_range.py  plot_all_sats.py  plot_individual_sats.py  plot_rinex_data.py  plot_ztd_pwv.py  plot_ztd_pwv_rinex.py  pseudorange_difference.py  pwv_analysis.py  pwv_analysis_ormd.py  pwv_analysis_ormd_2.py  pwv_analysis_pseudorange_combined.py  pwv_analysis_rinex.py  pwv_analysis_rinex_kalman_filter.py  pwv_analysis_rinex_old.py  pwv_analysis_ubx.py  pwv_analysis_ubx_kalman_filter.py  pwv_analysis_ubx_kalman_filter_old.py  pwv_analysis_ubx_new.py  pwv_analysis_ubx_old.py  pwv_analysis_ubx_single_difference.py  raPPPid_python_comparison.py  rasterio_test.py  rawx_vs_ubx_comparison.py  rinx_vs_ubx_comparison.py  single_pwv.py  tropospheric_delay_ORMD.py  tropospheric_delay_analysis.py  tropospheric_delay_analysis_ormd.py  tropospheric_delay_analysis_pseudorange_combined.py  tropospheric_delay_error_analysis.py
software/Python/src/VMF/: __init__.py  vmf3_grid.py  vmf3o_b_c.py
software/Python/src/calculations/: __init__.py  clock_correction.py  coordinates.py  datetime_conversion.py  elevation_azimuth.py  geometric_range.py  plot_satellite_angles.py
software/Python/src/ephemerides/: __init__.py  ephemeris.py
software/Python/src/meteorology/: __init__.py  old_trop_products.py  tropospheric_products.py
software/Python/src/parsers/: RINEXNavParser.py  RINEXObsParser.py  SFRBXParser.py  SFRBXParser_galileo.py  SFRBXParser_galileo_new.py  UBXConfigKeyMapping.py  UBXConfigMSGOUTParser.py  UBXConfigParser.py  UBXParser.py  UBXParser_command.txt  UBX_NAVParser_with_galileo.py  __init__.py
software/Python/src/storm_data/: dailyPrecipitationData.py  main.py  prismData.py  stormEventDatabase.py  streamGaugeData.py
software/Python/src/tropospheric_products/: __init__.py  precipitable_water_vapor.py  tropospheric_delay.py
(+1793 files in other folders)
