[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Awohali"
version = "0.1.0"
authors = [
    { name = "Madison Gleydura", email = "deepspace00@pm.me" },
]
description = "Open source GNSS receiver station for measuring tropospheric precipitable water vapor"
readme = "README.md"
requires-python = ">=3.13.0"

dependencies = [
    # --- Python source packages (software/Python/src) ---
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "geopandas==1.1.3",
    "rasterio==1.5.0",
    "dataretrieval==1.1.2",

    # --- Scripts / firmware tooling ---
    "pyelftools==0.32",     # Used by various build scripts
    "PyYAML==6.0.3",        # Used by a lot of things
    "pykwalify==1.8.0",     # YAML validation. Used by zephyr_module
    "canopen==2.3.0",       # Used by west_commands
    "packaging==24.1",
    "progress==1.6.1",
    "patool==3.0.1",
    "psutil==6.0.0",
    "pylink-square==1.3.0",
    "pyserial==3.5",
    "requests==2.32.5",
    "semver==3.0.4",
    "anytree==2.13.0",      # For ram/rom reports
    "intelhex==2.3.0",      # intelhex used by mergehex.py
    "west==1.5.0",          # West
    "pandas==2.3.2",
]

[project.optional-dependencies]
sphinx = [
    "Sphinx==7.4.7",
    "sphinx-rtd-theme==2.0.0",
]

zephyr-build-test = [
    "colorama==0.4.6",  # Used by twister for ansi color
    "ply==3.11",        # Python lex/yex used by twister
    "gcovr==8.0",       # Used for code coverge
    "coverage==7.6.2",  #
    "pytest==8.3.3",    # Used for west-command testing
    "mypy==1.11.2",     #
    "mock==5.1.0",      # Used for mocking functions in pytest
]

zephyr-compliance = [
    "clang-format==19.1.1",
    "python-magic==0.4.37",
    "python-magic-bin; sys_platform=='win32'",
    "lxml==5.3.0",
    "junitparser==3.2.0",
    "pylint==3.3.1",
    "unidiff==0.7.5",
    "yamllint==1.35.1",
    "sphinx-lint==1.0.0"
]

zephyr-extras = [
    "anytree==2.12.1",      # Used by twister for --test-tree option
    "gitpython==3.1.43",    # To use in ./scripts for memory footprint, code coverage, etc.
    "gitlint==0.19.1",      # Helper for developers - check git commit messages
    "junit2html==31.0.2",   # Helper for developers
    "lpc_checksum==3.0.0",  # Script used to build firmware images for NXP LPC MCUs
    "Pillow==10.4.0",       # Used by scripts/build/gen_cfb_font_header.py - helper script for user
    "imgtool==2.1.0",       # Can be used to sign a Zephyr application binary for consuption by a bootloader
    "grpcio-tools==1.66.2", # Used by nanopb module to generate sources from .proto files
    "protobuf==5.28.2",     #
    "PyGithub==2.4.0",      # Used by scripts/releases/bug_bash.py for generating top ten bug squashers
    "graphviz==0.20.3",     # Used to generate devicetree dependency graphs 
    "zcbor==0.9.0"          # Used to generate CBOR encoders and decoders, e.g. lwm2m_senml_cbor.
]

zephyr-run-test = [
    "pyocd==0.36.0",    # Used to flash & debud various boards
    "tabulate==0.9.0",  # Used by twister for board/hardware map
    "natsort==8.4.0",   # 
    "cbor==1.0.0",      # Used by mcuboot
    "psutil==1.2.1",    # Used for twister
    "python-can==4.4.2" # Used for CAN <=> host testing
]

[project.urls]
Documentation = "https://deepspace00.github.io/Awohali/"
Repository = "https://github.com/DeepSpace00/Awohali"

[tool.setuptools]
package-dir = { "" = "../software/Python/src" }

[tool.setuptools.packages.find]
where = ["../software/Python/src"]