[project]
name = "Awohali_Python_Code"
version = "0.1.0"
description = "Python code for Awohali"
authors = [
    { name="Madison Gleydura", email="deepspace00@pm.me" }
]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = []

[build-system]
requires = ["setuptools<=81.0", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptoops]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]